--- a/html/lecture8.html
+++ b/html/lecture8.html
@@ -100,7 +100,7 @@
                 It helps in improving the accuracy and efficiency of models in these domains.</p>
         </section>
         <section>
-            <h2>Techniques for Improving LLM Accuracy and Performance</h2>
+            <h2>Other Techniques for Improving LLM Accuracy and Performance</h2>
             <table>
                 <thead>
                     <tr>
