--- a/html/lecture8.html
+++ b/html/lecture8.html
@@ -100,7 +100,7 @@
                 It helps in improving the accuracy and efficiency of models in these domains.</p>
         </section>
         <section>
-            <h2>Other Techniques for Improving LLM Accuracy and Performance</h2>
+            <h3>Techniques for Improving LLM Accuracy and Performance</h3>
             <table>
                 <thead>
                     <tr>
@@ -116,6 +116,12 @@
                         <td>Fine-tuning involves adjusting the weights of a pre-trained model on a specific dataset. This technique helps the model adapt to the nuances of the target data, improving its performance on specific tasks.</td>
                         <td>Adapt model to specific tasks</td>
                         <td>Adjusting weights, Pre-trained model, Target dataset</td>
+                    </tr>
+                    <tr>
+                        <td>Parameter-Efficient Fine-Tuning (PEFT)</td>
+                        <td>PEFT focuses on tuning a smaller subset of parameters to reduce computational resources and time while still achieving high performance on specific tasks.</td>
+                        <td>Efficient fine-tuning with fewer resources</td>
+                        <td>Tuning fewer parameters, Computational efficiency, Task-specific fine-tuning</td>
                     </tr>
                     <tr>
                         <td>Data Augmentation</td>
@@ -159,9 +165,16 @@
                         <td>Enhance model robustness and security</td>
                         <td>Adversarial examples, Robustness, Security</td>
                     </tr>
+                    <tr>
+                        <td>Prompt Engineering</td>
+                        <td>Prompt engineering involves crafting effective prompts to guide the model towards generating desired outputs. This technique can significantly impact the performance and accuracy of LLMs in various tasks.</td>
+                        <td>Improve model responses and accuracy</td>
+                        <td>Prompt crafting, Task-specific prompts, Contextual prompts</td>
+                    </tr>
                 </tbody>
             </table>
-        </section>        
+        </section>
+        
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
         <nav>
